@@ -5,7 +5,7 @@
 
     <groupId>io.serverlessworkflow</groupId>
     <artifactId>serverlessworkflow-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.x</version>
     <packaging>pom</packaging>
 
     <name>Serverless Workflow :: Parent</name>
@@ -23,6 +23,20 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/serverlessworkflow/sdk-java.git</connection>
+        <developerConnection>scm:git:git@github.com:serverlessworkflow/sdk-java.git</developerConnection>
+        <url>https://github.com/serverlessworkflow/sdk-java</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>tsurdilo</id>
+            <name>Tihomir Surdilovic</name>
+        </developer>
+    </developers>
+
 
     <modules>
         <module>api</module>
@@ -186,7 +200,6 @@
     </dependencyManagement>
 
     <build>
-        <pluginManagement>
             <plugins>
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
@@ -244,14 +257,56 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>${version.failsafe.plugin}</version>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.0.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.10.4</version>
                     <configuration>
-                       <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        <source>8</source>
+                        <additionalparam>-Xdoclint:none</additionalparam>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.6</version>
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                            <configuration>
+                                <gpgArguments>
+                                    <arg>--batch</arg>
+                                    <arg>--pinentry-mode</arg>
+                                    <arg>loopback</arg>
+                                </gpgArguments>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
-        </pluginManagement>
     </build>
 
     <distributionManagement>
